bug 1238 - updated the showcase style sheet so that the position panel example north panel label is center aligned and has a normal font-weight.
git-svn-id: http://anonsvn.icesoft.org/repo/icefaces@12913 8668f098-c06c-11db-ba21-f49e70c34f74

--- a/samples/component-showcase/web/css/showcase_style.css
+++ b/samples/component-showcase/web/css/showcase_style.css
@@ -744,10 +744,12 @@ em {
 
 .panelBorderDemoLayoutMain td {
     vertical-align: middle;
+    text-align: center;
+    font-weight: normal;
 }
 
 .panelBorderDemoLayoutMain .icePageCenter {
-    background-color: #EAEDE6
+    background-color: #EAEDE6;
 }
 
 .panelBorderDemoLayoutMain .icePageNorth {
@@ -763,7 +765,7 @@ em {
 .panelBorderDemoLayoutMain .icePageSouth {
     height: 40px;
     background-color: #DEE7D5;
-    border-top-width:0px;
+    border-top-width: 0;
 }
 
 .panelBorderDemoLayoutMain .icePageWest {
